--- a/css/index.css
+++ b/css/index.css
@@ -2,19 +2,6 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-.center {
-  display: flex;
-  justify-content: center;
-}
-.middle {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.nav-text {
-  color: gray;
-  font-size: 1.5rem;
-}
 html,
 body,
 div,
@@ -143,6 +130,25 @@ table {
 * {
   box-sizing: border-box;
 }
+.center {
+  display: flex;
+  justify-content: center;
+}
+.middle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.boxFlex {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.nav-text {
+  color: gray;
+  font-size: 1.5rem;
+}
 html,
 body {
   height: 100%;
@@ -215,18 +221,51 @@ body {
 .container .experience {
   width: 49%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 3rem;
   background-color: #d3c4e3;
   font-family: 'Oswald', sans-serif;
   color: #ffffff;
-  font-size: 2rem;
   padding: 1.3rem;
+}
+.container .experience h2 {
+  font-size: 2rem;
   font-weight: 600;
+  margin-bottom: 1rem;
+}
+.container .experience ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .container .education {
   width: 49%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 3rem;
+  background-color: #b8e5d1;
+  font-family: 'Oswald', sans-serif;
+  color: #6c3f9e;
+  padding: 1.3rem;
+}
+.container .education h2 {
+  font-size: 2rem;
+  font-weight: 600;
+  margin-bottom: 1rem;
+}
+.container .education ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.container .skills {
+  width: 40%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -238,9 +277,16 @@ body {
   padding: 1.3rem;
   font-weight: 600;
 }
-.container .skills {
-  width: 40%;
-}
 .container .awards {
   width: 58%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 3rem;
+  background-color: #d3c4e3;
+  font-family: 'Oswald', sans-serif;
+  color: #ffffff;
+  font-size: 2rem;
+  padding: 1.3rem;
+  font-weight: 600;
 }
