--- a/less/index.less
+++ b/less/index.less
@@ -59,11 +59,19 @@ table {
 @color1: rgb(184, 229, 209);
 @color2: rgb(211, 196, 227);
 @color3: rgb(108, 63, 158);
-@color4: #ffffff;
+@color4: #FFFFFF;
+@color5: #696969;
 
 // Fonts
 @font1: 'Oswald', sans-serif;
 @font2: 'IBM Plex Serif', serif;
+@bodyFont: 1.2rem;
+@bodyWeight: 700;
+@bodyLineHeight: 1.4;
+@bodyLIMargin: 1.2rem;
+
+// Escaped Values
+@phone: ~'(max-width: 500px)';
 
 // CSS Mixins
 .center {
@@ -86,6 +94,7 @@ table {
 	font-size: 1.5rem;
 }
 
+
 html, body {
 	height: 100%;
 	display: flex;
@@ -102,7 +111,13 @@ html, body {
 		width: 100%;
 		display: flex;
 		justify-content: flex-end;
-		margin: 3% 1%;
+		margin: 2% 1%;
+
+		@media @phone {
+			display: flex;
+			justify-content: space-evenly;
+			padding: 2rem;
+		}
 	
 		a {
 			text-decoration: none;
@@ -116,6 +131,12 @@ html, body {
 		width: 100%;
 		display: flex;
 		justify-content: space-between;
+
+		@media @phone {
+			display: flex;
+			flex-direction: column;
+			flex-wrap: wrap;
+		}
 	}
 	#name {
 		width: 58%;
@@ -124,11 +145,17 @@ html, body {
 		flex-direction: column;
 		padding: 3rem;
 
+		@media @phone {
+			width: 100%;
+			margin-bottom: 1rem;
+		}
+
 		h1 {
 			font-size: 4.2rem;
 			font-family: @font1;
 			color: @color3;
 			font-weight: 600;
+			text-align: center;
 		}
 
 		h2 {
@@ -144,10 +171,15 @@ html, body {
 		background-color: @color2;
 		.boxFlex();
 
+		@media @phone {
+			width: 100%;
+		}
+
 		p {
 			line-height: 2;
 			color: @color4;
-			font-size: 1.2rem;
+			font-size: @bodyFont;
+			font-weight: @bodyWeight;
 		}
 	}
 
@@ -161,17 +193,35 @@ html, body {
 		padding: 3rem;
 		background-color: @color2;
 		font-family: @font1;
-		color: @color4;
 		padding: 1.3rem;
+
+		@media @phone {
+			width: 100%;
+			margin-bottom: 1rem;
+		}
 
 		h2 {
 			font-size: 2rem;
 			font-weight: 600;
 			margin-bottom: 1rem;
+			color: @color4;
 		}
 
 		ul {
 			.boxFlex();
+			color: @color5;
+			text-align: center;
+
+			li {
+				font-size: @bodyFont;
+				font-weight: @bodyWeight;
+				line-height: @bodyLineHeight;
+			}
+
+			li:nth-child(even) {
+				font-size: 0.8rem;
+				margin-bottom: @bodyLIMargin;
+			}
 		}
 	}
 	.education {
@@ -183,6 +233,10 @@ html, body {
 		color: @color3;
 		padding: 1.3rem;
 
+		@media @phone {
+			width: 100%;
+		}
+
 		h2 {
 			font-size: 2rem;
 			font-weight: 600;
@@ -191,13 +245,28 @@ html, body {
 
 		ul {
 			.boxFlex();
+			color: @color5;
+
+			li {
+				font-size: @bodyFont;
+				font-weight: @bodyWeight;
+				line-height: @bodyLineHeight;
+			}
+
+			li:nth-child(even) {
+				font-size: 0.8rem;
+				margin-bottom: @bodyLIMargin;
+			}
 		}
 	}
 
 	// Section 3
+	.third {
+		margin-bottom: 1rem;
+	}
 	.skills {
 		width: 40%;
-		.middle();
+		.boxFlex();
 		padding: 3rem;
 		background-color: @color1;
 		padding: 3rem;
@@ -207,17 +276,62 @@ html, body {
 		font-size: 2rem;
 		padding: 1.3rem;
 		font-weight: 600;
+
+		@media @phone {
+			width: 100%;
+			margin-bottom: 1rem;
+		}
+
+		h2 {
+			font-size: 2rem;
+			font-weight: 600;
+			margin-bottom: 1rem;
+		}
+
+		ul {
+			.boxFlex();
+			color: @color5;
+
+			li {
+				font-size: @bodyFont;
+				font-weight: @bodyWeight;
+				line-height: 2.3rem;
+			}
+
+			// li:nth-child(even) {
+			// 	font-size: 0.8rem;
+			// 	margin-bottom: @bodyLIMargin;
+			// }
+		}
 	}
-	.awards {
+	.intro {
 		width: 58%;
-		.middle();
+		.boxFlex();
 		padding: 3rem;
 		background-color: @color2;
 		font-family: @font1;
-		color: @color4;
 		font-size: 2rem;
 		padding: 1.3rem;
 		font-weight: 600;
+
+		@media @phone {
+			width: 100%;
+		}
+
+		h2 {
+			font-size: 2rem;
+			font-weight: 600;
+			margin-bottom: 1rem;
+			color: @color4;
+		}
+
+		p {
+			font-size: @bodyFont;
+			line-height: @bodyLineHeight;
+			color: @color5;
+			max-width: 75%;
+			text-align: justify;
+		}
 	}
-}
+} // this closes the container tag
 
